# Shiro-Bougyo

./: .gitignore  ArrowModel.cpp  ArrowModel.h  CMakeLists.txt  Project.sln  Shiro_Bougyo  glenv.cpp
Arduino code/PressurePlates/: PressurePlates.ino
Debug/: Project.ilk
Project/: AnimatedAttackWarriorOne.cpp  AnimatedAttackWarriorOne.h  AnimatedAttackWarriorTwo.cpp  AnimatedAttackWarriorTwo.h  AnimatedBowModel.cpp  AnimatedBowModel.h  AnimatedCollisionModel.cpp  AnimatedCollisionModel.h  AnimatedExitButtonModel.cpp  AnimatedExitButtonModel.h  AnimatedModel.cpp  AnimatedModel.h  AnimatedPlayButtonModel.cpp  AnimatedPlayButtonModel.h  AnimatedSettingsButtonModel.cpp  AnimatedSettingsButtonModel.h  ArrowModel.cpp  ArrowModel.h  BowModel.cpp  BowModel.h  ButtonModel.cpp  ButtonModel.h  Camera.h  CollisionModel.cpp  CollisionModel.h  Entity.h  GameState.h  GameStateManager.cpp  GameStateManager.h  GateModel.cpp  GateModel.h  HeadTracking.cpp  HeadTracking.h  Main.cpp  MenuModel.cpp  MenuModel.h  MenuState.cpp  MenuState.h  ObjModel.cpp  ObjModel.h  (+26 more)
Project/Debug/: vc140.idb
Project/Debug/Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Project/models/: rtwsik280w-Arrow.7z  wlsgeg9bvl-Bowrecurve.7z
Project/models/Arrow/: Arrow.mtl
Project/models/Arrow/.mayaSwatches/: Arrow_D.png_hcm.swatch
Project/models/Menu/: Menu.mtl
Project/models/Menu/.mayaSwatches/: CherryBlossomTree.png_hcm.swatch  Stone-texture.jpg_hcm.swatch  blackwood.png_hcm.swatch  ground-grass2.jpg_hcm.swatch  rock.png_hcm.swatch  water_texture.jpg_hcm.swatch
Project/models/Stuka/: Stuka.mtl
Project/models/Walls/: wall.mtl
Project/models/Walls/.mayaSwatches/: Stone_Masonry_Multi.jpg_hcm.swatch
Project/models/bow/: Bow_recurve.mtl  bow_01.mtl  bow_02.mtl
Project/models/bow/.mayaSwatches/: bowrecurve_D.png_hcm.swatch  zippo_D.png_hcm.swatch
Project/models/buttons/: ExitButton.mtl  ExitButtonPressed.mtl  exit-button.mtl  play-button.mtl  playbutton.mtl  playbuttonPressed.mtl  settings-button.mtl  settingsButton.mtl  settingsButtonPressed.mtl
Project/models/buttons/.mayaSwatches/: ExitButton.png_hcm.swatch  PlayButton.png_hcm.swatch  SettingsButton.png_hcm.swatch  blackwood.png_hcm.swatch
Project/models/castle/: castle.mtl  castle.obja20952
Project/models/castle/.mayaSwatches/: Cladding_Siding_Tan.jpg_hcm.swatch  Roofing_Tile_Spanish.jpg_hcm.swatch  Stone_Brushed_Khaki.jpg_hcm.swatch  __.jpg_hcm.swatch  __1_.jpg_hcm.swatch  ________1.jpg_hcm.swatch  grid.jpg_hcm.swatch  grid1_.jpg_hcm.swatch
Project/models/game-Map/: FirstWorld.mb  FirstWorld.mtl  FirstWorld1.mtl  GameWorld.ma
Project/models/game-Map/sourceimages/.mayaSwatches/: Yosemite.jpg_hcm.swatch  ground.jpg_hcm.swatch  sky.jpg_hcm.swatch  sky2.jpg_hcm.swatch
Project/models/heinkel/: Heinkel.mtl
Project/models/mouseCursor/: mouseCursor.mtl
Project/models/normalstuff/: Thumbs.db
Project/models/secondwarrior/: new.pdn  warrior.mtl
Project/models/secondwarrior/.mayaSwatches/: new.png_hcm.swatch
Project/models/secondwarrior/SecondWarriorAttack/: FirstStand.mtl  SecondStand.mtl  ThirdStand.mtl
Project/models/secondwarrior/SecondWarriorAttack/.mayaSwatches/: FireAxe.png_hcm.swatch  _2.tif_hcm.swatch  axe.png_hcm.swatch  new.png_hcm.swatch  sword.png_hcm.swatch  wood.png_hcm.swatch
Project/models/tower/: tower.mtl
Project/models/tower/.mayaSwatches/: Roofing_Tile_Spanish.jpg_hcm.swatch
Project/models/tower2/: castle2.mtl
Project/models/tree/: tree.mtl
Project/models/tree/.mayaSwatches/: bark.jpg_hcm.swatch  leaf.jpg_hcm.swatch
Project/models/warrior/: new.pdn  warrior.mtl
Project/models/warrior/.mayaSwatches/: new.png_hcm.swatch
Project/models/warrior/warriorAttack/: FirstStand.mtl  ThirdStand.mtl
Project/models/warrior/warriorAttack/.mayaSwatches/: new.png_hcm.swatch
Project/models/warrior/warriorAttack1/: ThirdStand.mtl
Project/models/world/: FirstWorld.mtl  FirstWorld1.mtl  try.mtl  try2.mtl
Project/models/world/.mayaSwatches/: Stone-texture.jpg_hcm.swatch  ground-grass2.jpg_hcm.swatch  water_texture.jpg_hcm.swatch
Project/wiiuse/: CMakeCache.txt  README.mkd
Project/wiiuse/lib/: wiiuse_debug.exp  wiiuse_debug.lib
